2001-11-22  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/numbers.test: Added division by zero tests.

2001-11-17  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/syntax.test: Added some tests, updated some others with
	respect to recent changes in eval.c.  Further, extracted test
	cases for guile's extended set! functionality to srfi-17.test.

	* tests/srfi-17.test:  New file.

2001-11-04  Stefan Jahn  <stefan@lkcc.org>

	* tests/ports.test: Run (close-port) before (delete-file) if
	necessary/advisory.

2001-10-26  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/eval.test:  Added tests for promises.

2001-10-21  Mikael Djurfeldt  <mdj@linnaeus>

	* lib.scm: Move module the system directives `export',
	  `export-syntax', `re-export' and `re-export-syntax' into the
	  `define-module' form.  This is the recommended way of exporting
	  bindings.

2001-10-18  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/syntax.test:  Added test cases for 'cond =>' syntax with
	else clause.  Changed some tests and comments related to the
	'case' form to reflect recent changes in the implementation.

2001-10-14  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/syntax.test:  Added test cases for 'lambda' syntax.

2001-10-13  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/syntax.test:  Added test cases for 'case' syntax.

2001-10-13  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/numbers.test:  Added a test case that checks if valid
	number strings are transformed correctly by string->number.

2001-09-21  Rob Browning  <rlb@defaultvalue.org>

	* tests/numbers.test (fixnum-bit): compute dynamically.

	* tests/bit-operations.test (fixnum-bit): compute dynamically.

2001-09-07  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* tests/getopt-long.test ("apples-blimps-catalexis example",
	"multiple occurances"): New top-level sections.

2001-08-31  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/numbers.test:  Made some of the patterns better readable.

2001-08-25  Thien-Thi Nguyen  <ttn@revel.glug.org>
