@@ -1,5 +1,9 @@
 2001-11-22  Dirk Herrmann  <D.Herrmann@tu-bs.de>
 
+	* tests/numbers.test: Added more division by zero tests.
+
+2001-11-22  Dirk Herrmann  <D.Herrmann@tu-bs.de>
+
 	* tests/numbers.test: Added division by zero tests.
 
 2001-11-17  Dirk Herrmann  <D.Herrmann@tu-bs.de>
